--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -7,8 +7,6 @@ permissions:
 on:
   pull_request:
     branches: [ main ]
-  push:
-    branches: [ main ]
   workflow_dispatch:
     inputs:
       revision_from:
@@ -310,147 +308,8 @@ jobs:
           # Dockerfile.artifact は output/ を /artifact にコピーする最小箱
           docker build -t "${IMAGE_SHA}" -t "${IMAGE_LATEST}" -f Dockerfile.artifact .
           docker push "${IMAGE_SHA}"
+          
+      - name: call package (only dispatch)
+        if: github.event_name == 'workflow_dispatch'
+        uses: ./.github/workflows/package.yml
           docker push "${IMAGE_LATEST}"
-
-  package:
-    # fork PR では secrets が使えないため、fork の場合はジョブ自体をスキップする例
-    if: ${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && needs.build.result == 'success') }}
-    needs: build
-    runs-on: ubuntu-latest
-    outputs:
-      ALL_OUTPUT_ARTIFACT: all-output
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set image ref fallback to latest
-        id: set_image_ref_pkg
-        run: |
-          # Try to use a deterministic latest tag; you can change to plain :latest if preferred
-          image_fallback="ghcr.io/${{ github.repository }}/qt-log4cpp-bin:latest"
-          echo "image_ref_latest=${image_fallback}" >> $GITHUB_OUTPUT
-
-      - name: Log in to GitHub Container Registry
-        run: |
-          if [ -n "${{ secrets.GHCR_PAT }}" ]; then
-            echo "Logging in to GHCR..."
-            echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
-          else
-            echo "GHCR_PAT not set; skipping GHCR login."
-          fi
-
-      - name: Pull latest artifact image
-        id: pull_image
-        run: |
-          image_latest="${{ steps.set_image_ref_pkg.outputs.image_ref_latest }}"
-          echo "Pulling ${image_latest}"
-          docker pull "${image_latest}"
-
-      - name: Extract artifacts
-        run: |
-          mkdir -p outData
-          docker run --rm -v ${{ github.workspace }}:/out "${{ steps.set_image_ref_pkg.outputs.image_ref_latest }}" \
-            sh -c "cp -r /artifact/. /out/outData"
-          echo "=== Host: outData ==="
-          ls -la outData || true
-          ls -R outData || true
-
-      - name: Upload all output as single artifact
-        # 中間出力
-        uses: actions/upload-artifact@v4
-        with:
-          name: all-output
-          path: outData
-
-  detect-outputs:
-    needs: package
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set_matrix.outputs.matrix }}
-    steps:
-      - name: Download all-output
-        uses: actions/download-artifact@v4
-        with:
-          name: all-output
-          path: all-output
-
-      - name: Detect subdirectories and emit matrix
-        id: set_matrix
-        run: |
-          cd all-output || exit 0
-          # list only directories directly under outData
-          dirs=$(find . -maxdepth 1 -mindepth 1 -type d -printf '%P\n' | sort -u)
-          if [ -z "$dirs" ]; then
-            echo "matrix=[]" >> $GITHUB_OUTPUT
-            echo "::warning file=detect-outputs::no subdirectories found under outData"
-          else
-            # convert to JSON array
-            json=$(printf '%s\n' $dirs | jq -R -s -c 'split("\n")[:-1]')
-            echo "matrix=$json" >> $GITHUB_OUTPUT
-          fi
-
-  upload-per-dir:
-    needs: detect-outputs
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        dir: ${{ fromJson(needs.detect-outputs.outputs.matrix) }}
-    steps:
-      - name: Download all-output
-        uses: actions/download-artifact@v4
-        with:
-          name: all-output
-          path: all-output
-
-      - name: Normalize dir name and set short sha
-        id: norm
-        run: |
-          dir="${{ matrix.dir }}"
-          safe=$(echo "$dir" | tr '/ ' '_' | tr -cd '[:alnum:]_-')
-          short=${GITHUB_SHA::8}
-          echo "safe=$safe" >> $GITHUB_OUTPUT
-          echo "short=$short" >> $GITHUB_OUTPUT
-
-      - name: Upload artifact for directory
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ steps.norm.outputs.safe }}-${{ steps.norm.outputs.short }}
-          path: all-output/${{ matrix.dir }}
-
-  # 中間出力削除
-  cleanup-intermediate:
-    needs: upload-per-dir
-    runs-on: ubuntu-latest
-    if: ${{ needs.upload-per-dir.result == 'success' }}
-    steps:
-      - name: Install jq (if needed)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
-
-      - name: Delete intermediate artifact all-output
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPO: ${{ github.repository }}
-          RUN_ID: ${{ github.run_id }}
-        run: |
-          set -euo pipefail
-          echo "Listing artifacts for run ${RUN_ID} in ${REPO}..."
-          artifacts_json=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" \
-            "https://api.github.com/repos/${REPO}/actions/runs/${RUN_ID}/artifacts")
-          id=$(echo "$artifacts_json" | jq -r '.artifacts[] | select(.name=="all-output") | .id' || true)
-          if [ -z "$id" ] || [ "$id" = "null" ]; then
-            echo "No all-output artifact found; nothing to delete."
-            exit 0
-          fi
-          echo "Found artifact id: $id. Deleting..."
-          resp=$(curl -s -o /dev/null -w "%{http_code}" -X DELETE \
-            -H "Authorization: token ${GITHUB_TOKEN}" \
-            "https://api.github.com/repos/${REPO}/actions/artifacts/${id}")
-          if [ "$resp" = "204" ]; then
-            echo "Deleted artifact id ${id} successfully."
-          else
-            echo "Failed to delete artifact id ${id}. HTTP status: $resp"
-            exit 1
-          fi
