--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -311,6 +311,6 @@ jobs:
           docker push "${IMAGE_SHA}"
           
       - name: call package (only dispatch)
-        if: github.event_name == 'workflow_dispatch'
+        #if: github.event_name == 'workflow_dispatch'
         uses: ./.github/workflows/package.yml
           docker push "${IMAGE_LATEST}"
