--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -310,7 +310,7 @@ jobs:
           docker build -t "${IMAGE_SHA}" -t "${IMAGE_LATEST}" -f Dockerfile.artifact .
           docker push "${IMAGE_SHA}"
           docker push "${IMAGE_LATEST}"
-          
-      - name: call package (only dispatch)
-        #if: github.event_name == 'workflow_dispatch'
-        uses: ./.github/workflows/package.yml
+
+  call_package:
+    #if: github.event_name == 'workflow_dispatch'
+    uses: ./.github/workflows/package.yml
