--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -312,5 +312,6 @@ jobs:
           docker push "${IMAGE_LATEST}"
 
   call_package:
+    needs: build
     #if: github.event_name == 'workflow_dispatch'
     uses: ./.github/workflows/package.yml
