--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -315,3 +315,4 @@ jobs:
     needs: build
     #if: github.event_name == 'workflow_dispatch'
     uses: ./.github/workflows/package.yml
+    secrets: inherit
