--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Detect subdirectories and emit matrix
         id: set_matrix
         run: |
-          cd all-output/outData || exit 0
+          cd all-output || exit 0
           dirs=$(find . -maxdepth 1 -mindepth 1 -type d -printf '%P\n' | sort -u)
           if [ -z "$dirs" ]; then
             echo "matrix=[]" >> $GITHUB_OUTPUT
