--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -105,7 +105,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.norm.outputs.safe }}-${{ steps.norm.outputs.short }}
-          path: all-output/outData/${{ matrix.dir }}
+          path: all-output/${{ matrix.dir }}
 
   cleanup-intermediate:
     needs: upload-per-dir
