--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -313,6 +313,6 @@ jobs:
 
   call_package:
     needs: build
-    #if: github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'workflow_dispatch'
     uses: ./.github/workflows/package.yml
     secrets: inherit
