--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -308,8 +308,8 @@ jobs:
           fi
           # Dockerfile.artifact は output/ を /artifact にコピーする最小箱
           docker build -t "${IMAGE_SHA}" -t "${IMAGE_LATEST}" -f Dockerfile.artifact .
-          docker push "${IMAGE_SHA}"
-          docker push "${IMAGE_LATEST}"
+          docker push --max-concurrent-uploads=1 "${IMAGE_SHA}"
+          docker push --max-concurrent-uploads=1 "${IMAGE_LATEST}"
 
   call_package:
     needs: build
